google_maps_new/style.css
#header {
  position: absolute;
  height: 50px;
  width: 100%;
  background-color: #96C5D3;
  z-index: 9999;
}

#header div {
  bottom: 5px;
}

#header-back {
  margin-top: 15px;
  padding-right: 10px;
  height: 30px;
  border-right: 1px solid #FFF;
}

#header-title {
  font-size: 40px;
  color: #19596C;
  text-align: center;
}

#header-close {
  margin-top: 15px;
  padding-left: 10px;
  height: 30px;
  border-left: 1px solid #FFF;
}

.headerBox {
  width: 100%;
  background-color: #97C6D4;
  height: 100px;
  position: relative;
  z-index: -1;
}

.settingBtn {
  position: absolute;
  top: 0px;
  left: 0px;
}

.settingBtn > img {
  width: 30px;
}

.input-wrapper {
  background-color: #FFF;
  height: 60px;
  font-size: 20px;
}

#pac-input {
  height: 50px;
  width: 90%;
  text-align: left;
  margin-top: 5px;
  padding-right: 50px;
  background: url(image/zoom.png) no-repeat scroll 3px 50%;
  background-color: #D4E1E4;
  background-size: 20px;
  padding-left:30px;
}

#pac-input:focus {
  padding-left: 30px;
}

.pac-container .pac-item {
  background-color: #D4E1E4;
}

input[type=text]{
  border-radius:30px;
  background-color: #D4E1E4;
}

#map {
  height: 760px;
  width: 100%;
  transition: 0.5s;
  float: right;
}

#bottomBar {
  background-color: #E7EFF1;
}

/*Sidebar start*/
html, body {
  font-family: "Lato", sans-serif;
  height: 100%;
}

.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #FFF;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 00px;
  text-align:left;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s;
    border-top: 1px solid #D2E0E4;
}

.sidenav a:hover{
    color: #f1f1f1;
}

.menuListItem img {
  height: 25px;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
    z-index: -1;
}

.rightBar {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  background-color: #FFF;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 00px;
  text-align:right;
}

.gasStationInfoBar {
  height: 90%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  background-color: #96C5D3;
  color: #3A3A3A;
  overflow-x: hidden;
  overflow-y: scroll;
  transition: 0.5s;
  padding-top: 00px;
  text-align: left;
}

.gasStation {
  margin-top: 70px;
  margin-left: 8%;
  font-size: 35px;
  background-color: #FFF;
  display: inline=block;
}

.gasStation img {
  width: 30px;
  margin-right: 30px;
  margin-left: 30px;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}
/*Sidebar end*/

/*Modal start*/
.modal-dialog {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

.modal-content {
  height: auto;
  min-height: 100%;
  border-radius: 0;
  background-color: #97C6D4;
}

.modal-title {
  text-align: center;
  font-weight: bold;
}

.modal-body {
  height: 500px;
}

/*Modal end*/

#gasModal {
  background-color: #97C6D4;
}

#gasMap {
  height: 100%;
}

/*bottom*/
#bottomDestContainer {
  height: 0px;
  width:100%;
  position:absolute;
}

#bottomDest {
  position:absolute;
  bottom:0px;
  width:100%;
  height:50px;
  border: 1px solid red;
}

/*Place details*/
#backBtnWrapper {
  position: absolute;
  top: 40px;
  left: 35px;
  z-index: 999;
}

#backBtn {
  opacity: 0.3;
  width: 20px;
  display: none;
}

#favoriteAddBtn > a {
  color: #8ED7EB;
}

#favoriteAddBtn > a:hover {
  text-decoration: none;
}

.favoriteAdd {
  text-align: left;
}

.favCancel {
  padding-top: 20px;
  font-size: 25px;
}

#favoriteAddBtn {
  text-align: left;
  color: #78CFE8;
  font-size: 30px;
}

#favoriteAddBtn:before {
  /*content: ' \2605';*/
  /*color: #fff;*/
}

.cancelBtnWrapper {
  text-align: right;
}

.closeRightSidebar {
  width: 20px;
  opacity: 0.3;
}

.placeIconWrapper {
  padding-top: 50px;
  text-align: center;
}

.autocompletePlaceIcon {
  /*width: 60px;*/
  -moz-box-shadow: 0px 6px 5px #ccc;
  -webkit-box-shadow: 0px 6px 5px #ccc;
  box-shadow: 0px 6px 5px #ccc;
  -moz-border-radius:190px;
  -webkit-border-radius:190px;
  border-radius:190px;
}

#autocompletePlaceName {
  padding-top: 20px;
  color: #585858;
  font-size: 35px;
  font-weight: bold;
  text-align: center;
}

#autocompletePlaceCity {
  text-align: center;
  font-size: 25px;
  color: #828282;
}

#autocompletePlaceDistance {
  text-align: center;
  font-size: 25px;
  color: #858585;
  padding-bottom: 50px;
}

.autocompletePlaceLine {
  border-bottom: 2px solid #DCE7E9;
}

.autocompletePlacePhoneNumber {
  margin: 20px auto;
  text-align: center;
}

.autocompletePlacePhoneNumber {
  color: #2AC7FF;
  font-size: 20px;
  text-decoration: underline;
}

.afterPhoneNumberLine {
  text-align: center;
  width: 100%;
  border-bottom: 2px solid #DCE7E9;
}

.reserveDepart > button {
  margin-top: 50px;
  padding-bottom: 20px;
  height: 100px;
}

#favoriteAskModal {
  width: 60%;
  height: 190px;
  margin: auto auto;
}

#favoriteAskModal > div > div {
  background-color: #FFF;
}

#favoriteAskModal .modal-body {
  height: 50px;
}

#closeAskModal {
  width: 80%;
  height: 90%;
  margin: auto auto;
}

#closeAskModal .modal-title {
  font-size: 50px;
  margin-top: 20%;
  border-bottom: #FFF;
}

#closeAskModal > div > div {
  background-color: #FFF;
}

#closeAskModal .modal-body {
  height: 150px;
  text-align: center;
  color: #9B9B9B;
  font-size: 30px;
}

#favoriteName {
  width: 100%;
}

#favoriteListContents {
  background-color: #FFF;
  overflow-y: scroll;
  height: 100%;
}

#favoriteListContents a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
  border-top: 1px solid #D2E0E4;
}

#favoriteListContents a:hover {
    color: #f1f1f1;
}

#navigationBottomBar {
  position: absolute;
  bottom: 0;
  height: 100%;
  width: 100%;
  transition:  0.5s;
  z-index: 999;
  text-align: center;
  font-size: 35px;
}

.navigationBottomBarTitle {
  height: 50px;
  background-color: #FFF;
  z-index: 999;
}

.navigationBottomBarHeader {
  position: absolute;
  bottom: 0;
  padding: 50px;
}

.downImage > img {
  height: 30px;
}

#estimatedTime, #estimatedDistance {
}

.showTime {
  font-weight: bold;
}

.navigationBottomBarBody {
  transition: 0.5s;
  height:600px;
  background-color: #EEF3F4;
}

.destinationInfo {
  height:100%;
  border-right: 1px solid #DBDFE0;
}

.navigationBottomBarBodyRight {
  height: 100%;
}

#destinationName {
  font-size: 25px;
  text-align: left;
  padding-left: 30px;
  padding-top: 30px;
}

#addWaypoints {
  height: 20%;
  border-bottom: 1px solid #DBDFE0;
  padding-top: 30px;
}

#addWaypoints img {
  height: 60%;
  opacity: 0.3;
}

.middleFunctions a, .middleFunctions a:hover {
  height: 50%;
  width: 100%;
  padding-top: 30px;
  border-bottom: 1px solid #DBDFE0;
  text-decoration: none;
  color: #333333;
}

.bottomBottons {
  height: 30%;
  padding-top: 30px;
}

.bottomBottons > div, .bottomBottons > div > button {
  height: 80%;
}

#openNav {
  z-index: 9999;
}

#microphone {
  width: auto;
  height: 45px;
}

